--- a/public/email/email.html
+++ b/public/email/email.html
@@ -225,9 +225,31 @@
         <tr>
           <td style="padding: 30px 10px">
             <div
-              style="border: 1px solid #eee; width: 120px; text-align: center"
+              style="
+                border: 1px solid #eee;
+                width: 120px;
+                text-align: center;
+                position: relative;
+              "
+              class="img-back"
             >
-              <img src="./assets/Lecturer.png" />
+              <style>
+                .img-back::before {
+                  content: "";
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 100%;
+                  height: 100%;
+                  background-image: url("https://www.tedxlavasan.com/assets/speakers-img/zomorodian.JPG");
+                  background-size: cover;
+                  filter: grayscale(1);
+                }
+              </style>
+              <img
+                style="opacity: 0.8; mix-blend-mode: color"
+                src="./assets/Lecturer.png"
+              />
             </div>
             <h3
               style="
