the remote end hung up unexpectedly error

--- a/public/email/email.html
+++ b/public/email/email.html
@@ -262,7 +262,7 @@
                 color: #333333;
               "
             >
-              لورم ایپسوم
+              لیلی زمردیان
             </h3>
             <div
               style="
