--- a/email/email.html
+++ b/email/email.html
@@ -98,7 +98,7 @@
     <table>
       <tr>
         <td style="padding: 30px 10px;">
-          <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/NegarAlizade.JPG);background-size: cover;">
+          <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/LeyliZomorodiyan.JPG);background-size: cover;">
             <img src="./assets/Lecturer.png" style="opacity: 0.8;mix-blend-mode: color;" />
           </div>
           <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">لیلی زمردیان</h3>
@@ -126,6 +126,8 @@
         </td>
       </tr>
 
+
+
       <tr>
         <td style="padding: 30px 10px;">
           <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/MostafaMalekiyan.JPG);background-size: cover;">
@@ -135,10 +137,10 @@
           <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">سخنران</div>
         </td>
         <td style="padding: 30px 10px;">
-          <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/MehrdadOskoui.JPG);background-size: cover;">
+          <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/ParvaneSalahshuri.JPG);background-size: cover;">
             <img src="./assets/Lecturer.png" style="opacity: 0.8;mix-blend-mode: color;" />
           </div>
-          <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">مهرداد اسکویی</h3>
+          <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">پروانه سلحشوری</h3>
           <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">سخنران</div>
         </td>
         <td style="padding: 30px 10px;">
@@ -146,17 +148,47 @@
             <img src="./assets/Lecturer.png" style="opacity: 0.8;mix-blend-mode: color;" />
           </div>
           <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">محمدرضا جلائی پور</h3>
-          <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">سخنران</div>
+          <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">گفتگو</div>
         </td>        <td style="padding: 30px 10px;">
           <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/SharminMeymandiNezhad.JPG);background-size: cover;">
             <img src="./assets/Lecturer.png" style="opacity: 0.8;mix-blend-mode: color;" />
           </div>
           <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">شارمین میمندی نژاد</h3>
-          <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">سخنران</div>
+          <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">گفتگو</div>
         </td>
       </tr>
       
-  
+      <tr>
+        <td style="padding: 30px 10px;">
+          <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/MehrdadOskoui.JPG);background-size: cover;">
+            <img src="./assets/Lecturer.png" style="opacity: 0.8;mix-blend-mode: color;" />
+          </div>
+          <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">مهرداد اسکویی</h3>
+          <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">گفتگو</div>
+        </td>
+        <td style="padding: 30px 10px;">
+          <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/AftabDarvishi.JPG);background-size: cover;">
+            <img src="./assets/Lecturer.png" style="opacity: 0.8;mix-blend-mode: color;" />
+          </div>
+          <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">آفتاب درویشی</h3>
+          <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">سخنران</div>
+        </td>
+        <td style="padding: 30px 10px;">
+          <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/MahyarTahmasbi.JPG);background-size: cover;">
+            <img src="./assets/Lecturer.png" style="opacity: 0.8;mix-blend-mode: color;" />
+          </div>
+          <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">مهیار طهماسبی</h3>
+          <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">اجرای موسیقی</div>
+        </td>
+        <td style="padding: 30px 10px;">
+          <div style="border: 1px solid #EEE;width: 120px;text-align: center;background-image:url(./speakers-img/SiavashSaffarianPour.JPG);background-size: cover;">
+            <img src="./assets/Lecturer.png" style="opacity: 0.8;mix-blend-mode: color;" />
+          </div>
+          <h3 style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-weight: bold; font-size: 18px; color: #333333;">سیاوش صفاریان پور</h3>
+          <div style="direction: rtl; text-align: center; line-height: 1.5; font-family: 'tahoma'; font-size: 16px; color: #8e8e8e;">مجری</div>
+        </td>
+
+      </tr>
 
       <tr>
         <td colspan="4" style="text-align: center; padding-top: 80px;">
